Update procedures to use the public logging API